<resources>
    <string name="app_name">charles_nfc</string>
    <string name="default_scan_title">Nothing scanned.</string>
    <string name="nfc_disabled">NFC is disabled.</string>
    <string name="nfc_enabled">NFC enabled</string>
    <string name="item_image_desc">Image of item</string>
    <string name="na">NA</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="unknown_item">Unknown item.</string>
    <string name="calories">Calories</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="item_id">ITEM_ID</string>
    <string name="title_activity_test_shopping_cart">test_shopping_cart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="shopping_cart">Shopping Cart</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    //Checkout
    <string name="check_out_title">Delivery Information</string>
    <string name="edit_address">Edit Address</string>
    <string name="checkout">Checkout</string>
    <string name="address">Edit Address</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="place_order">Place Order</string>
    <string name="return_shopping_cart">Return to Shopping Cart</string>
    <string name="return_checkout">Return to Checkout Page</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="checkout_label">Checkout</string>
    <string name="select_timing_label">Checkout</string>
    //Select Timing
    <string name="set_time">Confirm Timing</string>

    <string name="didn_t_get_otp_resend">Didn\'t Get OTP? <b>Resend</b></string>
    <string-array name="health_conditions">
        <item>Diabetes</item>
        <item>High Blood Pressure</item>
        <item>Heart Disease</item>
        <item>High Cholesterol</item>
        <item>Obesity</item>
        <item>NIL</item>
    </string-array>
</resources>