<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="0"
            />

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/shopping_cart"
            android:contentDescription="@string/item_image_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_scan_title"
            android:id="@+id/scan_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            android:textSize="20sp"
            />

        <TableLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            >
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />
                <TextView
                    android:id="@+id/item_calories"
                    android:text="@string/na"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2"
                    android:gravity="end"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/carbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />
                <TextView
                    android:id="@+id/item_carbs"
                    android:text="@string/na"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2"
                    android:gravity="end"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />
                <TextView
                    android:id="@+id/item_protein"
                    android:text="@string/na"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2"
                    android:gravity="end"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/fat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />
                <TextView
                    android:id="@+id/item_fats"
                    android:text="@string/na"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2"
                    android:gravity="end"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1" />
                <TextView
                    android:id="@+id/item_price"
                    android:text="@string/na"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2"
                    android:gravity="end"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/cart_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"

            android:textSize="15sp"
            android:textColor="@color/white"
            android:visibility="visible"
            android:clickable="true"
            android:text="@string/add_to_cart"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:text="@string/item_id"
            android:fontFamily="@font/ubuntu_mono"
            android:id="@+id/scan_nfc_id"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:layout_weight="1"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>