<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="25dp"
    android:orientation="vertical"
    tools:context=".SelectTiming">

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/choose_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/date"
            android:text="@string/select_date"
            android:textColor="@color/white"
            android:textSize="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/time"
            android:layout_width="158dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            />

        <Button
            android:id="@+id/choose_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="10dp"
            android:layout_toRightOf="@+id/time"
            android:text="@string/select_time"
            android:textColor="@color/white" />

    </RelativeLayout>

    <Button
        android:id="@+id/set_time"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/set_time"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/return_checkout"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/return_checkout"
        android:layout_marginBottom="10dp"
        />


</LinearLayout>