<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Checkout"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_out_title"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        />


    <GridLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:rowCount="3"
        android:columnCount="3"
        >
        <TextView
            android:text="Address:"
            android:layout_row="0"
            android:layout_column="0"
            android:paddingRight="10dp"
            />
        <TextView
            android:text="Delivery date:"
            android:layout_row="1"
            android:layout_column="0"
            android:paddingRight="10dp"
            />
        <TextView
            android:text="Delivery time:"
            android:layout_row="2"
            android:layout_column="0"
            android:paddingRight="10dp"
            />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="right"
            android:layout_row="0"
            android:layout_column="2"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="right"
            android:layout_row="1"
            android:layout_column="2"
            />
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="end"
            android:layout_row="2"
            android:layout_column="2"
            />
    </GridLayout>

    <Button
        android:id="@+id/select_date_and_time"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:text="@string/select_date_and_time"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <Button
        android:id="@+id/place_order"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/place_order"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <Button
        android:id="@+id/return_shopping_cart"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/return_shopping_cart"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        />


</LinearLayout>